Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35260

qt build fails due to missing #include <QColor>

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.2.0
    • 5.2.0 RC1
    • Other
    • None
    • compiler: mingw-w64 gcc4.8.2 »x86_64-4.8.2-release-posix-seh-rt_v3-rev0«
      OS: Win7UltimateSP1x64
    • c996740162dd63fa20e549e57c78ca990b2ca1c2

      building Qt fails in \qtwinextras\src\imports\winextras\qquickdwmfeatures_p_p.h:64:12: error: field 'originalSurfaceColor' has incomplete type

      with »configure.bat -release -opensource -ltcg -opengl desktop -nomake examples -nomake tools -no-compile-examples -skip webkit -skip doc -no-accessibility«

      An `#include <QColor>` in »qquickdwmfeatures_p.h« (note: only one ›_p‹) fixes this.

      If you put the include only in »qquickdwmfeatures_p_p.h« (note: two ›_p‹), compile will fail in »moc_qquickdwmfeatures_p.cpp«.

      PS: I don’t know to which component »qtwinextras« belongs.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            darklighter Norbert Pfeiler
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes