Add missing include for QQuickDwmFeatures plugin.

Task-number: QTBUG-35260

Change-Id: I8145fd8a98b8549de7e819740e6b7529d0785488
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>